--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,11 @@ dependencies.compile fileTree(dir: 'libs', include: '*.jar')
 
 test {
   systemProperty "test.resources", file('src/test/resources')
+  systemProperty "temporaryDir", temporaryDir
   environment GNUPGHOME: file('src/test/resources/.gnupg')
   reports.junitXml.enabled = false
   reports.html.enabled = false
   testLogging.showStandardStreams = true
+  forkEvery 1
+  maxParallelForks Runtime.getRuntime().availableProcessors();
 }
