--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ dependencies.testCompile(
     ['junit-addons:junit-addons:1.+'],
 )
 dependencies.compile(
- fileTree(dir: 'libs', include: '*.jar'),
+ ['se.soy.securerstring:SecurerString:1.1'],
  ['org.slf4j:slf4j-api:1.7.+'],
  ['ch.qos.logback:logback-classic:1.1.+'],
 )
