--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ dependencies.testCompile(
     ['junit-addons:junit-addons:1.+'],
 )
 dependencies.compile(
- ['se.soy.securerstring:SecurerString:1.1'],
+ ['se.soy.securerstring:SecurerString:1.+'],
  ['org.slf4j:slf4j-api:1.7.+'],
  ['ch.qos.logback:logback-classic:1.1.+'],
 )
