--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .gradle
-build/
-src/test/resources/.gnupg/random_seed
+/build/
+/src/test/resources/.gnupg/random_seed
 *.hprof
-src/test/resources/.gnupg/.#*
+/src/test/resources/.gnupg/.#*
